Fixed Checkout Alignment

--- a/src/components/basket/basket.css
+++ b/src/components/basket/basket.css
@@ -72,6 +72,7 @@
     gap: 10px;
     background-color: white;
     color: black;
+    text-decoration: none;
     border-radius: 1em;
     margin: 0.3em;
     justify-content: space-between;
